HEAD
	+ Fixed wrong crontab string for weekly full backup
	+ Use software module and ProgressIndicator to install packages
	+ Fixed problems with pulsating progress bar in restore-tool
	+ Use fork + exec to launch zenity, fixes argument parsing problems
	+ Making environment local for installing modules in restore-tool
	+ Added cleanup operation on failure
	+ Added backup-cleanup script for manual cleanups
	+ Properly handle connection errors in RemoteStorage
2.0.7
	+ Set label of restore file button to "Restore" instead of "Change"
	+ Set the volume size to 25 as default for remote system
	+ Added support for disaster recovery
	+ Allowed to restore the root directory in
	  EBox::EBackup::restoreFile
	+ Method for restore log database from a directory
	+ Disabled asymmetric encryption method until we can support in in
	  disaster recovery
	+ Fixed non-internationalizable strings in RemoteSettings model
2.0.6
	+ Using /etc/cron.d instead of ebox crontab for scheduled
	  backups
	+ Fixed error in scheduled backups using week days
2.0.5
	+ Better error and precondition control when making backups
	+ Do not spawn a separate process to make the configuration backup
	+ Warn instead of abort all the backup if there are unsaved changes
2.0.4
	+ Fixed incremental backup frequency with full backup frequency is
	"twice a month"
2.0.3
	+ New "twice a month" frecquency for full backup
2.0.2
	+ Fixed bug excluding DB slices directory
2.0.1
	+ Added support for the sliced backup of the DB
1.5.3
	+ Zentyal rebrand
1.5.2
	+ Target is now mandatory in any case to decide if the backup configuration
	is complete.
	+ Status cache is regenerated when restarting the module and before doing a
	backup.
1.5.1
	+ Removed information about obsolete eBox remote backup
1.5
	+ Enable backup event watcher by default
	+ Improve help message for configuration
	+ Added eBox Storage from Denver (US)
	+ Added '/tmp' to default excludes
	+ Fixed element text in excludes/includes